Avoid truncation of generated API key (#717)

--- a/client/pages/Admin/ApiTokens/ApiTokens.module.scss
+++ b/client/pages/Admin/ApiTokens/ApiTokens.module.scss
@@ -2,7 +2,16 @@
   .message {
     margin: 10px 0 0 0;
   }
-  .keyField {
+
+  .apiKey {
     margin: 10px 0 0 0;
+
+    .text {
+      margin-right: 6px;
+    }
+
+    .copy {
+      cursor: pointer;
+    }
   }
 }
